mirrorgate-dashboard/src/sass/components/__components-common.scss
/*!
 * Copyright 2017 Banco Bilbao Vizcaya Argentaria, S.A.
 *
 * Licensed under the Apache License, Version 2.0 (the "License");
 * you may not use this file except in compliance with the License.
 * You may obtain a copy of the License at
 *
 *     http://www.apache.org/licenses/LICENSE-2.0
 *
 * Unless required by applicable law or agreed to in writing, software
 * distributed under the License is distributed on an "AS IS" BASIS,
 * WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
 * See the License for the specific language governing permissions and
 * limitations under the License.
 */

.page-component {
  width: 100%;
}

.component {
    background-color: $component-background-color;
    display: flex;
    width: 100%;
    margin: 0 auto;
    overflow: hidden;
    //display: block;

    max-height: 100%;
}

.component__content {
    width: 100%;
    display: flex;
    flex-direction: column;
    //padding-bottom: 20px;
    height: 100%;

    svg {
        * {
            transition: fill-opacity 0.3s ease-in-out,
                fill 0.3s ease-in-out,
                display 0.3s ease-in-out;
        }

        display: block;
        margin: 0 auto;
        height: 100%;
        width: 100%;
    }
}

.component__header {
    align-items: center;
    box-sizing: border-box;
    display: flex;
    flex-wrap: wrap;
    justify-content: space-between;
    margin: 10px 0;
    min-height: 10px;
    padding: 0 10px;
    width: 100%;
}

.component__body {
    height: calc(100% - 100px);
    min-height: 0px;
    min-width: 0px;
    padding: 5px 15px 15px 15px;
    position: relative;
    flex-basis: 100%;
}

.title {
    font-weight: $title-weight;
    margin-bottom: 0;
    text-align: left;
    text-transform: $title-transform;
}

.title-desc {
    color: $dark-grey;
    margin: 0;
    text-align: right;
}


.indicator__bar {
  padding: 0;
  display: flex;
  clear: both;
  width: 100%;

  .indicator {
    line-height: 1em;
    text-align: center;
    flex: 1 1 auto;
    margin-left: 5px;

    &:first-child {
      margin-left: 0;
    }

    .stats{
        font-size: 2.2em;
        line-height: 0.9em;
    }

    .stat-desc{
        font-size: $level-6;
        padding: 0 3px;
    }

    .stat-important{
        font-size: $level-2;
    }

    &:nth-last-child(n+2):first-child {
      text-align: left;
      .stat-desc {
        padding-left: 0;
      }
    }

    &:nth-last-child(n+2) ~ :last-child {
      text-align: right;
      .stat-desc {
        padding-right: 0;
      }
    }
  }
}

.status__indicator {
  background-color: $dark-grey;
  border-radius: 50%;
  display: inline-block;
  height: 1.1rem;
  width: 1.1rem;
  margin: 0 3px 0 0;

  &.status__indicator-ok{
      background-color: $green;
  }

  &.status__indicator-error{
      background-color: $red;
  }

  &.status__indicator-warn{
      background-color: $yellow;
  }
}

.progress-bar {
  transform: skewX(-25deg);
  padding-left: 7px;
  padding-bottom: 2.5rem;

  //Hack due to bootstrap styles coliding in firefox
  width: 100%;
  box-sizing: border-box;
  background-color: transparent;
  height: auto;
  box-shadow: none;

  .progress__bar {
    height: 1.3rem;
    box-sizing: border-box;
    float: left;


    &:nth-last-child(n+2) ~ .progress__bar {
      border-left: 2px solid $light-grey;
    }
  }
}

.progress-bar-fallback {
  text-align: center;
  height: 1.3rem;
  width: 100%;
  display: table;
  span {
    display: table-cell;
    line-height: 1.3rem;
  }
}

//Modules states backgrounds
$border-width: -5px;

.component {
    &.module-ok {
        box-shadow: inset 0 $border-width 0 $darker-grey;
    }

    &.module-warning {
        box-shadow: inset 0 $border-width 0 $yellow;
    }

    &.module-error{
        box-shadow: inset 0 $border-width 0 $red;
    }

    &.module-warning--level-2, &.module-warning.tile--primary {
        @extend .module-warning;
        background: $module-warning-background !important;
    }

    &.module-error--level-2, &.module-error.tile--primary{
        @extend .module-error;
        background: $module-error-background !important;
    }

    &.module-ok--level-2, &.module-ok.tile--primary {
        @extend .module-ok;
        background: $module-ok-background !important;
    }

}

tile-container.module-data-error {
    position: relative;

    > * {
        -webkit-filter: blur(5px); /* Safari */
        filter: blur(5px);
        position: relative;
        opacity: 0.5;
    }

    &:before{
        content: "Server error";
        color: #fff;
        position: absolute;
        width: 100%;
        text-align: center;
        top: 49%;
        left: 0;
    }
}

//LEGENDS
.legend{
    align-items: center;
    color: $dark-grey;
    display: flex;
    flex-grow: 0;
    flex-wrap: wrap;
    font-size: $level-6;
    justify-content: center;
    margin: 0 auto;
    padding: 0 10px 20px 10px;
}

.legend__item{
    padding: 0 10px;
}

//Sprints
.legend__color{
    background-color: $dark-grey;
    border-radius: 5px;
    display: inline-block;
    height: 7px;
    margin: 0 7px 0 0;
    position: relative;
    top: -0.2em;
    width: 12px;
}

.legend__color--grey{
    background-color: $light-grey;
}

.legend__color--dashed{
  background-color: transparent;
  border: 1.5px dashed $darker-grey;
}

.legend__color--green{
  background-color: $green;
}

.legend__color--blue{
    background-color: $blue;
}

.legend__color--red{
    background-color: $red;
}
.legend__color--yellow{
    background-color: $yellow;
}

// RESPONIVE
@media all and (min-width: $l) {
    .component{
        margin: 0 auto;
        max-width: 100%;
    }
    .subtitle {
        margin: 0 0 0 0;
    }
    tile-container.module-data-error {
        &:before{
            content: "Server error";
            font-size: $level-2;
        }
    }
    .indicator {
        font-size: $level-3;

        .stats{
            font-size: $level-1 - 1.6;
        }
    }
}

@media all and (min-width: $xl){

}

@media all and (min-width: $xxl) {
    .component{
        margin: 0 auto;
    }

    .component__header {
        padding: 10px 20px;
    }

    .subtitle {
        margin: 0 0 30px 0;
    }
}

@mixin reduce-header() {
    .title {
        font-size: $level-3;
    }

    .title-desc {
        font-size: $level-5;
    }
}

svg {
  path {
    fill: $svg-path-fill;

    &.status-in-progress {
      fill: $blue;
    }

    &.status-done {
      fill: $green;
    }

    &.status-to-rework {
      fill: $red;
    }

    &.status-backlog {
      fill: $neutral;
    }

    &.status-impeded {
      fill: $red;
    }

    &.status-bad {
      fill: $red;
    }

    &.status-good {
      fill: $yellow;
    }

    &.status-excellent {
      fill: $green;
    }

    &.status-hidden {
      fill: transparent;
    }
  }
}

.status-in-progress {
  color: $blue;
}

.status-done {
  color: $green;
}

.status-to-rework {
  color: $red;
}

.status-impeded {
  color: $red;
}

.status-bad {
  color: $red;
}

.status-good {
  color: $yellow;
}

.status-excellent {
  color: $green;
}

.fill-in-progress {
  background-color: $blue;
}

.fill-done {
  background-color: $green;
}

.fill-to-rework {
  background-color: $red;
}

.fill-impeded {
  background-color: $red;
}

.fill-bad {
  background-color: $red;
}

.fill-good {
  background-color: $yellow;
}

.fill-excellent {
  background-color: $green;
}

.fill-backlog {
  background-color: $light-grey;
}

.fill-remain {
  border: 1px dashed $darker-grey;
}

.tendency {

  &::before {
    font-size: 1.5rem;
    padding-right: 4px;
    content: '~';
  }

  &.tendency-oneup::before {
    content: url(../img/top_arrow.svg);
    width: 16px;
    display: inline-block;
  }

  &.tendency-twoup::before {
    content: url(../img/top_arrow_double.svg);
    width: 16px;
    display: inline-block;
  }

  &.tendency-threeup::before {
    content: url(../img/top_arrow_triple.svg);
    width: 16px;
    display: inline-block;
  }

  &.tendency-onedown::before {
    content: url(../img/down_arrow.svg);
    width: 16px;
    display: inline-block;
  }

  &.tendency-twodown::before {
    content: url(../img/down_arrow_double.svg);
    width: 16px;
    display: inline-block;
  }

  &.tendency-threedown::before {
    content: url(../img/down_arrow_triple.svg);
    width: 16px;
    display: inline-block;
  }

}

